@@ -71,6 +71,15 @@ int main()
 
     printf(" Testing getClass \n") ;
 
+    printf(" checking with bad input : host = %s userid = %s\n",
+                          cim_host,cim_host_userid) ;
+    ce = NewCIMCEnv("bogus",0,&rc,&msg);
+    if (rc == 3) {
+        printf (" bad input caught OK,\n\tmsg = %s\n\n",msg);
+    } else {
+        printf (" bad input NOT caught.\n");
+    }
+
 #ifdef v2local
     printf(" using SfcbLocal interface : host = %s userid = %s\n",
                           cim_host,cim_host_userid) ;
@@ -80,27 +89,33 @@ int main()
                           cim_host,cim_host_userid,cim_host_port) ;
     ce = NewCIMCEnv("XML",0,&rc,&msg);
 #endif
-	
-	  client = ce->ft->connect(ce, cim_host , "http", cim_host_port, cim_host_userid, cim_host_passwd , &status);
 
-    op = (CMPIObjectPath *)ce->ft->newObjectPath(ce, "root/cimv2", "CIM_ComputerSystem" , &status); 
-    class =(CMPIConstClass *) client->ft->getClass(client,(CIMCObjectPath *) op, CMPI_FLAG_IncludeQualifiers, NULL, &status);
+    if (rc == 0 ) {
+	
+        client = ce->ft->connect(ce, cim_host , "http", cim_host_port, cim_host_userid, cim_host_passwd , &status);
+
+        op = (CMPIObjectPath *)ce->ft->newObjectPath(ce, "root/cimv2", "CIM_ComputerSystem" , &status); 
+        class =(CMPIConstClass *) client->ft->getClass(client,(CIMCObjectPath *) op, CMPI_FLAG_IncludeQualifiers, NULL, &status);
 	 
-    /* Print the results */
-    printf( "getClass() rc=%d, msg=%s\n", 
+        /* Print the results */
+        printf( "getClass() rc=%d, msg=%s\n", 
             status.rc, (status.msg)? (char *)status.msg->hdl : NULL);
 
-    if (!status.rc) {
-        printf("result:\n");
-        showClass(class);
-    }
+        if (!status.rc) {
+            printf("result:\n");
+            showClass(class);
+        }
 
-    if (class) class->ft->release((CMPIConstClass *)class);
-    if (op) op->ft->release(op);
+        if (class) class->ft->release((CMPIConstClass *)class);
+        if (op) op->ft->release(op);
 
-    if (client) client->ft->release(client);
-    if(ce) ce->ft->release(ce);
-    if (status.msg) CMRelease(status.msg);
+        if (client) client->ft->release(client);
+        if(ce) ce->ft->release(ce);
+        if (status.msg) CMRelease(status.msg);
     
-    return 0;
+        return 0;
+    } else {
+        printf ("Call to NewCIMCEnv failed, rc = %d\n\tmsg = %s\n",rc,msg);
+        return 1;
+    }
 }
