@@ -1,6 +1,6 @@
 
 /*
- * $Id: cimcclient.c,v 1.2 2007/02/07 18:09:58 mihajlov Exp $
+ * $Id: cimcclient.c,v 1.3 2008/05/16 22:32:35 mchasal Exp $
  *
  * © Copyright IBM Corp. 2007
  *
@@ -42,30 +42,37 @@ CIMCEnv* NewCIMCEnv(const char *id, unsigned int options, int *rc, char **msg)
    InitCimcEnv  init=NULL;
    CIMCEnv     *rv=NULL;
    
-   libName[LIBLEN]=0;
-   entry[ENTLEN]=0;
-   snprintf(libName, LIBLEN, "libcimcClient%s.so",id);
-   
-   library = dlopen(libName, RTLD_NOW);
-   if (library==NULL) {
-     *msg=calloc(1,ERRLEN+1);
-     *rc=1;
-     snprintf(*msg,ERRLEN,"Unable to load %s library %s",libName,dlerror());
-   } else {
-     snprintf(entry, ENTLEN,"_Create_%s_Env", id);
-     init = (InitCimcEnv)dlsym(library, entry);
-     if (init==NULL) {
-       *msg=calloc(1,ERRLEN+1);
-       *rc=2;
-       snprintf(*msg,ERRLEN,"Unable to locate entry %s in %s",entry,libName);
-     } else {
-       *rc=0;
-       *msg=NULL;
-       rv = init(id,options,rc,msg); 
-       rv->hdl=library;
-     }
-   }
-   return rv;
+    libName[LIBLEN]=0;
+    entry[ENTLEN]=0;
+
+    if ((strcmp(id, "XML") != 0) && (strcmp(id, "SfcbLocal") != 0)) {
+        *msg=calloc(1,ERRLEN+1);
+        *rc=3;
+        snprintf(*msg,ERRLEN,"Invalid connection type '%s'. Must be 'XML' or 'SfcbLocal'.",id);
+    } else {
+        snprintf(libName, LIBLEN, "libcimcClient%s.so",id);
+        library = dlopen(libName, RTLD_NOW);
+        if (library==NULL) {
+            *msg=calloc(1,ERRLEN+1);
+            *rc=1;
+            snprintf(*msg,ERRLEN,"Unable to load %s library %s",libName,dlerror());
+        } else {
+            snprintf(entry, ENTLEN,"_Create_%s_Env", id);
+            init = (InitCimcEnv)dlsym(library, entry);
+            if (init==NULL) {
+                *msg=calloc(1,ERRLEN+1);
+                *rc=2;
+                snprintf(*msg,ERRLEN,"Unable to locate entry %s in %s",entry,libName);
+            } else {
+                *rc=0;
+                *msg=NULL;
+                rv = init(id,options,rc,msg); 
+                rv->hdl=library;
+            }
+        }
+    }
+      
+    return rv;
 }
 
 void ReleaseCIMCEnv(CIMCEnv *env)
