@@ -1,3 +1,12 @@
+2008-05-16  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+    * cimc/cimcclient.c
+    Check for valid connection type and return rc=3 and a message
+    if incorrect.
+
+    * TEST/v2test_gc.c
+    Test valid handling of above, and check rc on existing tests
+
 2008-05-01  Chris Buccella <buccella@linux.vnet.ibm.com>
 
 	* backend/cimxml/client.c, backend/cimxml/property.c, 
